Add various things

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 
+/Ejercicios/JavaApplication1/nbproject/private/
+/Ejercicios/Animal/nbproject/private/
+/Ejercicios/Animal/build/
+/Ejercicios/Calculadora2/nbproject/private/
+/Ejercicios/Calculadora2/build/
+/Ejercicios/ScientificCalculator/target/
