Solved trigo functions into prueba.javaproject

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Ejercicios/Calculadora2/nbproject/private/
 /Ejercicios/Calculadora2/build/
 /Ejercicios/ScientificCalculator/target/
+/Ejercicios/Prueba/target/
