Add triki folder (old tictactoe prototype) && Add TicTacToe (new tictactoe with graphics prototype)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 /Ejercicios/Calculadora2/build/
 /Ejercicios/ScientificCalculator/target/
 /Ejercicios/Prueba/target/
+/Ejercicios/TicTacToe/nbproject/private/
