--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /Ejercicios/ScientificCalculator/target/
 /Ejercicios/Prueba/target/
 /Ejercicios/TicTacToe/nbproject/private/
+/Ejercicios/triki/tictactoe-main/target/
