--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /Ejercicios/Prueba/target/
 /Ejercicios/TicTacToe/nbproject/private/
 /Ejercicios/triki/tictactoe-main/target/
+/Ejercicios/TicTacToe/target/
