Initialized FlightReservationSystem project

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Ejercicios/TicTacToe/nbproject/private/
 /Ejercicios/triki/tictactoe-main/target/
 /Ejercicios/TicTacToe/target/
+/Ejercicios/MVC/target/
