Added new project named = weze parking

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Ejercicios/Factory/target/
 /Ejercicios/Lavadora/target/
 /Ejercicios/SimuladorBancario/target/
+/Ejercicios/Quiz_1/WezeParking/target/
