Added project named = prototype

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /Ejercicios/Lavadora/target/
 /Ejercicios/SimuladorBancario/target/
 /Ejercicios/Quiz_1/WezeParking/target/
+/Ejercicios/Prototype/target/
