Añadido el proyecto Decorador, Terminado el proyecto Sistema de Gestion Bancario

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /Ejercicios/SimuladorBancario/target/
 /Ejercicios/Quiz_1/WezeParking/target/
 /Ejercicios/Prototype/target/
+/Ejercicios/Decorador/target/
+/Ejercicios/SistemaGestionBancaria/target/
