Añadidos proyecto de ejemplo Estrategia y proyecto base ClasificadorUsuarios

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /Ejercicios/Prototype/target/
 /Ejercicios/Decorador/target/
 /Ejercicios/SistemaGestionBancaria/target/
+/Ejercicios/Estrategia/target/
+/Ejercicios/ClasificadorUsuarios/target/
