Agregado proyecto Adaptador

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /Ejercicios/SistemaGestionBancaria/target/
 /Ejercicios/Estrategia/target/
 /Ejercicios/ClasificadorUsuarios/target/
+/Ejercicios/Adaptador/target/
