Agregado proyecto SistemaReserva

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Ejercicios/Estrategia/target/
 /Ejercicios/ClasificadorUsuarios/target/
 /Ejercicios/Adaptador/target/
+/Ejercicios/SistemaReserva/target/
