Agregado y terminado el proyecto AutoMap

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /Ejercicios/ClasificadorUsuarios/target/
 /Ejercicios/Adaptador/target/
 /Ejercicios/SistemaReserva/target/
+/Ejercicios/AutoMap/target/
